--- a/www/app/spot/sample-tab.html
+++ b/www/app/spot/sample-tab.html
@@ -1,105 +1,7 @@
-<form name='SampleTabForm' novalidate=''>
+<form name='straboForm' novalidate=''>
   <ion-view>
     <ion-content>
-      <div ng-repeat='field in vm.rock_sample_survey'>
-        <div id='{{ field.name }}' ng-show='vm.showField(field.relevant)'>
-          <div data-ng-switch on='field.type.split(" ")[0]'>
-            <div ng-switch-when='integer'>
-              <label class='item item-input item-stacked-label item-text-wrap'
-                     ng-class='{ "has-errors" : SampleTabForm[field.name].$invalid, "no-errors" : SampleTabForm[field.name].$valid }'>
-                <span class='input-label'>{{field.label}}</span>
-                <input type='number'
-                       name='{{ field.name }}'
-                       placeholder='{{ field.hint }}'
-                       ng-model='vm.spot.properties[field.name]'
-                       ng-required='{{ field.required }}'
-                       ng-min='vm.getMin(field.constraint)'
-                       ng-max='vm.getMax(field.constraint)'>
-              </label>
-            </div>
-            <div ng-switch-when='decimal'>
-              <label class='item item-input item-stacked-label item-text-wrap'
-                     ng-class='{ "has-errors" : SampleTabForm[field.name].$invalid, "no-errors" : SampleTabForm[field.name].$valid }'>
-                <span class='input-label'>{{field.label}}</span>
-                <input type='number'
-                       name='{{ field.name }}'
-                       placeholder='{{ field.hint }}'
-                       ng-model='vm.spot.properties[field.name]'
-                       ng-required='{{ field.required }}'
-                       ng-min='vm.getMin(field.constraint)'
-                       ng-max='vm.getMax(field.constraint)'>
-              </label>
-            </div>
-            <div ng-switch-when='text'>
-              <label class='item item-input item-stacked-label item-text-wrap'
-                     ng-class='{ "has-errors" : SampleTabForm[field.name].$invalid, "no-errors" : SampleTabForm[field.name].$valid }'>
-                <span class='input-label'>{{field.label}}</span>
-                <input type='text'
-                       name='{{ field.name }}'
-                       placeholder='{{ field.hint }}'
-                       ng-model='vm.spot.properties[field.name]'
-                       ng-required='{{ field.required }}'>
-              </label>
-            </div>
-            <div ng-switch-when='note'>
-              <label class='item item-input item-stacked-label item-text-wrap'
-                     ng-class='{ "has-errors" : SampleTabForm[field.name].$invalid, "no-errors" : SampleTabForm[field.name].$valid }'>
-                <span class='input-label'>{{ field.label }}</span>
-                <textarea name='{{ field.name }}'
-                          rows='4'
-                          placeholder='{{field.hint}}'
-                          ng-model='vm.spot.properties[field.name]'
-                          ng-required='{{ field.required }}'>
-                </textarea>
-              </label>
-            </div>
-            <div ng-switch-when='select_one'>
-              <label class='item item-input item-select item-stacked-label item-text-wrap'
-                     ng-class='{ "has-errors" : SampleTabForm[field.name].$invalid, "no-errors" : SampleTabForm[field.name].$valid }'>
-                <span class='input-label'>{{ field.label }}</span>
-                <span class='item-placeholder'><small>{{ field.hint }}</small></span><br>
-                <select name='{{ field.name }}'
-                        ng-model='vm.spot.properties[field.name]'
-                        ng-options='choice.name as choice.label for choice in vm.rock_sample_choices
-                                  | filter: { "list name": field.type.split(" ")[1] }'
-                        ng-required='{{ field.required }}'>
-                  <option value=''></option>
-                </select>
-              </label>
-            </div>
-            <div ng-switch-when='select_multiple'>
-              <label class='item item-stacked-label item-text-wrap' ng-class='vm.setSelMultClass(field)'>
-                <span class='input-label'>{{field.label}}</span>
-                <span class='item-placeholder'><small>{{ field.hint }}</small></span><br>
-                <ion-checkbox name='{{ field.name }}'
-                              ng-repeat='choice in vm.rock_sample_choices | filter: { "list name": field.type.split(" ")[1] }'
-                              ng-checked='vm.isOptionChecked(field.name, choice.name)'
-                              ng-click='vm.toggleChecked(field.name, choice.name)'
-                              ng-required='{{ field.required }}'>
-                  {{ choice.label }}
-                </ion-checkbox>
-              </label>
-            </div>
-            <div ng-switch-when='acknowledge'>
-              <label class='item item-stacked-label item-text-wrap' ng-class='vm.setSelMultClass(field)'>
-                <span class='input-label'>{{field.label}}</span><br>
-                <span class='item-placeholder'><small>{{ field.hint }}</small></span>
-                <ion-checkbox name='{{ field.name }}'
-                              ng-checked='vm.isAcknowledgeChecked(field.name)'
-                              ng-click='vm.toggleAcknowledgeChecked(field.name)'
-                              ng-required='{{ field.required }}'>
-                  Yes
-                </ion-checkbox>
-              </label>
-            </div>
-            <div ng-if='SampleTabForm[field.name].$touched'>
-              <div ng-messages='SampleTabForm[field.name].$error'>
-                <div ng-messages-include='app/form/error-messages.html'></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <auto-fields/>
     </ion-content>
   </ion-view>
 </form>
