--- a/www/index.html
+++ b/www/index.html
@@ -73,6 +73,7 @@
     <script src="app/user/user.controller.js"></script>
 
     <!-- ng spot tab controllers -->
+    <script src="app/spot/3dstructures.controller.js"></script>
     <script src="app/spot/custom-tab.controller.js"></script>
     <script src="app/spot/groupmembers-tab.controller.js"></script>
     <script src="app/spot/groups-tab.controller.js"></script>
