--- a/www/app/spot/orientation-tab.html
+++ b/www/app/spot/orientation-tab.html
@@ -3,7 +3,7 @@
     <ion-content>
       <div ng-show='vm.showDynamicFields'>
         <div ng-repeat='field in vm.survey'>
-          <div id='{{ field.name }}' ng-show='vm.showField(field.relevant)'>
+          <div id='{{ field.name }}' ng-show='vm.showField(field)'>
             <div data-ng-switch on='field.type.split(" ")[0]'>
               <div ng-switch-when='integer'>
                 <label class='item item-input item-stacked-label item-text-wrap'
