--- a/www/app/project/projects.html
+++ b/www/app/project/projects.html
@@ -1,5 +1,4 @@
-<form name='straboForm' novalidate=''>
-  <ion-view title='Project Description'>
+<ion-view title='Projects'>
   <ion-nav-buttons side='left'>
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
@@ -11,8 +10,7 @@
       <button ng-click='vm.submit();' class='button button-icon icon ion-checkmark-circled'></button>
     </div>
   </ion-nav-buttons>
-  <ion-content class='has-header'>
-    <auto-fields/>
+  <ion-content class='has-header padding'>
+    List of Projects
   </ion-content>
 </ion-view>
-</form>
