--- a/www/index.html
+++ b/www/index.html
@@ -67,6 +67,9 @@
     <script src="app/map/offline-map.controller.js"></script>
     <script src="app/menu/menu.controller.js"></script>
     <script src="app/project/project.controller.js"></script>
+    <script src="app/project/projects.controller.js"></script>
+    <script src="app/project/rock-units.controller.js"></script>
+    <script src="app/project/tools.controller.js"></script>
     <script src="app/remote-connection/login.controller.js"></script>
     <script src="app/remote-connection/sync-modal.controller.js"></script>
     <script src="app/spots/spots.controller.js"></script>
