--- a/www/app/project/tools.html
+++ b/www/app/project/tools.html
@@ -1,10 +1,19 @@
-<ion-view title='Tools'>
-  <ion-nav-buttons side='left'>
-    <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
-  </ion-nav-buttons>
-  <ion-content class='has-header'>
-    <div class='padding'>
-      Edit tools - in development
-    </div>
-  </ion-content>
-</ion-view>
+<form name='straboForm' novalidate=''>
+  <ion-view title='Tools'>
+    <ion-nav-buttons side='left'>
+      <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
+    </ion-nav-buttons>
+    <ion-nav-buttons side='right'>
+      <div ng-if='vm.pristine || !vm.valid'>
+        <button class='button disabled button-icon icon ion-checkmark-circled'></button>
+      </div>
+      <div ng-if='!vm.pristine && vm.valid'>
+        <button ng-click='vm.submit();' class='button button-icon icon ion-checkmark-circled'></button>
+      </div>
+    </ion-nav-buttons>
+    <ion-content class='has-header'>
+      <span class='padding'>Page in progress .... need to add boxes for multiple meausrements and the logic behind the calculation</span>
+      <auto-fields/>
+    </ion-content>
+  </ion-view>
+</form>
