--- a/www/index.html
+++ b/www/index.html
@@ -68,6 +68,7 @@
     <script src="app/menu/menu.controller.js"></script>
     <script src="app/project/project.controller.js"></script>
     <script src="app/project/projects.controller.js"></script>
+    <script src="app/project/rock-unit.controller.js"></script>
     <script src="app/project/rock-units.controller.js"></script>
     <script src="app/project/tools.controller.js"></script>
     <script src="app/remote-connection/login.controller.js"></script>
