added view/edit rock unit from spot tab

--- a/www/app/spot/spot-tab.html
+++ b/www/app/spot/spot-tab.html
@@ -119,6 +119,9 @@
           <option value=''></option>
         </select>
       </label>
+      <button ng-click='vmChild.viewRockUnit();' ng-show='vm.spot.properties.rock_unit'
+              class='button button-clear icon-left icon ion-eye'>View/Edit Rock Unit
+      </button>
 
       <div class='item item-divider'>
         Notes
