--- a/www/app/remote-connection/login.html
+++ b/www/app/remote-connection/login.html
@@ -6,10 +6,10 @@
 
         <div class='list list-inset'>
           <label class='item item-input logininput'>
-            <input type='text' placeholder='Username' ng-model='vm.loginData.email'>
+            <input type='text' placeholder='Username' ng-model='vm.data.login.email'>
           </label>
           <label class='item item-input'>
-            <input type='password' placeholder='Password' ng-model='vm.loginData.password'>
+            <input type='password' placeholder='Password' ng-model='vm.data.login.password'>
           </label>
         </div>
         <div class='padding'>
