--- a/www/app/user/user.html
+++ b/www/app/user/user.html
@@ -3,33 +3,33 @@
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
-    <div ng-if='vm.loggedIn && !vm.pristine'>
+    <div ng-if='vm.currentUser && !vm.pristine'>
       <button ng-click='vm.submit();' class='button button-icon icon ion-checkmark-circled'></button>
     </div>
-    <div ng-if='!vm.loggedIn || vm.pristine'>
+    <div ng-if='vm.currentUser && vm.pristine'>
       <button class='button disabled button-icon icon ion-checkmark-circled'></button>
     </div>
   </ion-nav-buttons>
   <ion-content class='has-header'>
-    <h6 ng-hide='vm.hideActionButtons.logout'>You are currently logged in as: {{vm.data.login.email}}</h6>
-    <label class='item item-input' ng-hide='vm.hideActionButtons.login'>
+    <h6 ng-show='vm.currentUser'>You are currently logged in as: {{ vm.currentUser }}</h6>
+    <label class='item item-input' ng-hide='vm.currentUser'>
       <input type='text' placeholder='Email' ng-model='vm.data.login.email'>
     </label>
-    <label class='item item-input' ng-hide='vm.hideActionButtons.login'>
+    <label class='item item-input' ng-hide='vm.currentUser'>
       <input type='text' placeholder='Password' ng-model='vm.data.login.password'>
     </label>
-    <button ng-click='vm.doLogin();' ng-hide='vm.hideActionButtons.login'
+    <button ng-click='vm.doLogin();' ng-hide='vm.currentUser'
             ng-disabled='!(vm.data.login.email && vm.data.login.password)'
             class='button icon-left icon ion-log-in button-balanced'>Login
     </button>
-    <button ng-click='vm.doLogout();' ng-hide='vm.hideActionButtons.logout'
+    <button ng-click='vm.doLogout();' ng-show='vm.currentUser'
             class='button icon-left icon ion-log-out button-assertive'>Logout
     </button>
-    <div ng-show='vm.loggedIn'>
+    <div ng-show='vm.currentUser'>
       <br>
       <label class='item item-input item-stacked-label'>
         <span class='input-label'>Name</span>
-        <input type='text' placeholder='John Doe' ng-model='vm.data.user_name' ng-change='onNameChange'>
+        <input type='text' placeholder='John Doe' ng-model='vm.data.user_name'>
       </label>
     </div>
   </ion-content>
