added traces to spot tab

--- a/www/app/spot/spot-tab.html
+++ b/www/app/spot/spot-tab.html
@@ -123,6 +123,10 @@
               class='button button-clear icon-left icon ion-eye'>View/Edit Rock Unit
       </button>
 
+      <div>
+        <auto-fields/>
+      </div>
+
       <div class='item item-divider'>
         Notes
       </div>
