--- a/www/index.html
+++ b/www/index.html
@@ -109,6 +109,7 @@
     <script src="app/shared/localstorage.factory.js"></script>
     <script src="app/spot/content-model-survey.factory.js"></script>
     <script src="app/spot/spot.factory.js"></script>
+    <script src="app/spot/spot-forms.factory.js"></script>
     <script src="app/user/user.factory.js"></script>
 
     <!-- ng filters -->
