use rock unit term consistently

--- a/www/app/project/rock-unit.html
+++ b/www/app/project/rock-unit.html
@@ -1,5 +1,5 @@
 <form name='straboForm' novalidate=''>
-  <ion-view title='Rock Description'>
+  <ion-view title='Rock Unit Description'>
     <ion-nav-buttons side='left'>
       <button ng-hide='vm.currentSpot' ng-click='vm.goToRockUnits();'
               class='button button-icon icon ion-arrow-left-c'></button>
