--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,6 @@
     <script src="app/app.config.js"></script>
 
     <!-- ng controllers -->
-    <script src="app/config/preferences.controller.js"></script>
     <script src="app/debug/debug.controller.js"></script>
     <script src="app/map/archive-tiles.controller.js"></script>
     <script src="app/map/image-map.controller.js"></script>
@@ -66,6 +65,7 @@
     <script src="app/map/map.controller.js"></script>
     <script src="app/map/offline-map.controller.js"></script>
     <script src="app/menu/menu.controller.js"></script>
+    <script src="app/project/preferences.controller.js"></script>
     <script src="app/project/project.controller.js"></script>
     <script src="app/project/projects.controller.js"></script>
     <script src="app/project/rock-unit.controller.js"></script>
@@ -89,7 +89,6 @@
     <script src="app/spot/spot-tab.controller.js"></script>
 
     <!-- ng factories -->
-    <script src="app/config/preferences.factory.js"></script>
     <script src="app/data-models/data-models.factory.js"></script>
     <script src="app/form/form.factory.js"></script>
     <script src="app/map/coordinate-range.factory.js"></script>
@@ -102,6 +101,7 @@
     <script src="app/map/offline-tile.factory.js"></script>
     <script src="app/map/slippy-tile-names.factory.js"></script>
     <script src="app/map/symbology.factory.js"></script>
+    <script src="app/project/preferences.factory.js"></script>
     <script src="app/project/project.factory.js"></script>
     <script src="app/remote-connection/remote-server.factory.js"></script>
     <script src="app/shared/helpers.factory.js"></script>
