moved spots files to spot folder

--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,8 @@
     <script src="app/project/tools.controller.js"></script>
     <script src="app/remote-connection/login.controller.js"></script>
     <script src="app/remote-connection/sync-modal.controller.js"></script>
-    <script src="app/spots/spots.controller.js"></script>
+    <script src="app/spot/spot.controller.js"></script>
+    <script src="app/spot/spots.controller.js"></script>
     <script src="app/user/user.controller.js"></script>
 
     <!-- ng spot tab controllers -->
@@ -85,7 +86,6 @@
     <script src="app/spot/images-tab.controller.js"></script>
     <script src="app/spot/orientation-tab.controller.js"></script>
     <script src="app/spot/sample-tab.controller.js"></script>
-    <script src="app/spot/spot.controller.js"></script>
     <script src="app/spot/spot-tab.controller.js"></script>
 
     <!-- ng factories -->
