--- a/www/app/spot/spots.html
+++ b/www/app/spot/spots.html
@@ -11,8 +11,12 @@
     <button ng-click='vm.showActionsheet()' class='button button-icon icon ion-arrow-up-b'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
+    <div class='padding' ng-show='vm.spots.length === 0'>
+      No Spots added yet. Add a spot using the '+' button in the top right or by drawing a point, line or polygon on the
+      Main Map page.
+    </div>
     <ion-list>
-      <ion-item ng-repeat='spot in vm.spots track by spot.properties.id'
+      <ion-item ng-repeat='spot in vm.spots | orderBy:"-properties.modified_timestamp" track by spot.properties.id'
                 href='#/spotTab/{{spot.properties.id}}/spot'>
         {{spot.properties.name}}
       </ion-item>
