use image basemap instead of image map

--- a/www/app/map/image-basemap.html
+++ b/www/app/map/image-basemap.html
@@ -1,7 +1,7 @@
 <ion-view>
-  <ion-nav-title>{{ vm.imageMap.title }}</ion-nav-title>
+  <ion-nav-title>{{ vm.imageBasemap.title }}</ion-nav-title>
   <ion-nav-buttons side='left'>
-    <button ng-click='vm.goToImageMaps();' class='button button-icon icon ion-arrow-left-c'></button>
+    <button ng-click='vm.goToImageBasemaps();' class='button button-icon icon ion-arrow-left-c'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
     <button ng-click='vm.showActionsheet()' class='button button-icon icon ion-arrow-up-b'></button>
