--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -47,8 +47,8 @@
         <ion-item nav-clear menu-close href='#/app/map'>
           Main Map
         </ion-item>
-        <ion-item nav-clear menu-close href='#/app/image-maps'>
-          Image Maps
+        <ion-item nav-clear menu-close href='#/app/image-basemaps'>
+          Image Basemaps
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/offlinemap'>
           Offline Maps
