--- a/www/app/spot/images-tab.html
+++ b/www/app/spot/images-tab.html
@@ -13,9 +13,9 @@
                  ng-click='vmChild.annotateChecked(image)'
                  ng-checked='image.annotated'/>
           <span class='annotate-checkbox-label'>Annotate?</span>
-          <button ng-click='vmChild.goToImageMap(image)'
+          <button ng-click='vmChild.goToImageBasemap(image)'
                   ng-show='image.annotated'
-                  class='button icon ion-map button-small image-map'></button>
+                  class='button icon ion-map button-small image-basemap'></button>
         </li>
       </ul>
     </div>
