--- a/www/index.html
+++ b/www/index.html
@@ -60,8 +60,8 @@
     <!-- ng controllers -->
     <script src="app/debug/debug.controller.js"></script>
     <script src="app/map/archive-tiles.controller.js"></script>
-    <script src="app/map/image-map.controller.js"></script>
-    <script src="app/map/image-maps.controller.js"></script>
+    <script src="app/map/image-basemap.controller.js"></script>
+    <script src="app/map/image-basemaps.controller.js"></script>
     <script src="app/map/map.controller.js"></script>
     <script src="app/map/offline-map.controller.js"></script>
     <script src="app/menu/menu.controller.js"></script>
@@ -92,7 +92,7 @@
     <script src="app/data-models/data-models.factory.js"></script>
     <script src="app/form/form.factory.js"></script>
     <script src="app/map/coordinate-range.factory.js"></script>
-    <script src="app/map/image-map.factory.js"></script>
+    <script src="app/map/image-basemap.factory.js"></script>
     <script src="app/map/map-draw.factory.js"></script>
     <script src="app/map/map-features.factory.js"></script>
     <script src="app/map/map-layer.factory.js"></script>
