--- a/www/app/map/image-basemaps.html
+++ b/www/app/map/image-basemaps.html
@@ -1,15 +1,15 @@
-<ion-view title='Image Maps'>
+<ion-view title='Image Basemaps'>
   <ion-nav-buttons side='left'>
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
-    <div class='padding' ng-if='!vm.imageMaps.length'>
+    <div class='padding' ng-if='!vm.imageBasemaps.length'>
       In the Images tab for Spot, add an image to a Spot and check the Annotate box to make it available for annotation.
     </div>
     <ion-list>
-      <ion-item ng-repeat='imageMap in vm.imageMaps'
-                ng-click='vm.goToImageMap(imageMap)'>
-        {{imageMap.title}}
+      <ion-item ng-repeat='imageBasemap in vm.imageBasemaps'
+                ng-click='vm.goToImageBasemap(imageBasemap)'>
+        {{imageBasemap.title}}
       </ion-item>
     </ion-list>
     </ion-content>
